# msprof-mcp

./: .gitignore  README.md  RELEASE.md  hatch_build.py  main.py  pyproject.toml  server.py
.github/workflows/: build-wheels.yml  ci.yml  publish-release.yml
log/: mstt_advisor_20260207135235.xlsx  mstt_advisor_20260207135317.xlsx  mstt_advisor_20260207140311.xlsx  mstt_advisor_20260207140654.xlsx
scripts/: download_trace_processor_shell.py  verify_installed_analyze_overlap.py
src/msprof_mcp/: server.py
src/msprof_mcp/resources/: __init__.py
src/msprof_mcp/resources/perfetto/: __init__.py  trace_processor_shell.metadata.json
src/msprof_mcp/tools/: csv_analyze.py  db_query.py  json_analyze.py  msprof_analyze_cmd.py
src/msprof_mcp/tools/trace_view/: connection_manager.py  perfetto_tool.py  trace_processor_shell.py  trace_view_analyze.py
tests/: test_csv_analyze.py  test_db_query.py  test_json_analyze.py  test_msprof_analyze_cmd.py  test_server.py  test_trace_view_analyze.py
tools/trace_view/: query_helpers.py  trace_view_analyze.py
