[project]
name = "msprof-mcp"
version = "0.1.2"
description = "MCP server for Ascend Profiler (msprof) analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "perfetto>=0.16.0",
    "pandas>=2.0.0",
    "msprof-analyze==26.0.0b2",
]
authors = [
    { name = "Wei Zhang", email = "example@example.com" }
]

[project.scripts]
msprof-mcp = "msprof_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msprof_mcp"]
exclude = [
    "src/msprof_mcp/resources/perfetto/trace_processor_shell-*",
    "src/msprof_mcp/resources/perfetto/trace_processor_shell.metadata.json",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
